# mastodon-watchdog

./: .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  sample.http
src/: config.rs  feedback.rs  main.rs  mastodon.rs  matrix.rs  mattermost.rs  message.rs  twitter.rs  zinc.rs
src/models/: config.rs  feedback.rs  mastodon.rs  matrix.rs  mod.rs  zinc.rs
