[package]
name = "mastodon-watchdog"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
actix-rt = "2.7"
tokio = { version = "1.21", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = {version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.5"
html2md = "0.2"
